--- a/django_project/web/templates/crop_field_detail.html
+++ b/django_project/web/templates/crop_field_detail.html
@@ -8,9 +8,14 @@
     <div class="row" style="margin-bottom: 15px;">
         <div class="small-8 columns vp-center" style="border-bottom: 2px solid black;">
             <div class="row">
-                <div class="small-12 columns" style="margin-left: -15px;">
+                <div class="small-11 columns" style="margin-left: -15px;">
                     <h4>{{cropfield.display_name}}</h4>
                 </div>
+                {% if cropfield.creator.id == user.id %}
+                    <div class="small-1 column" style="margin-left: -15px;">
+                        <a href="{% url 'edit-crop-field' cropfield.id %}"><i class="fi-page-edit vp-size-28"></i></a>
+                    </div>
+                {% endif %}
             </div>
         </div>
 
