add page titles

--- a/django_project/web/templates/alerts.html
+++ b/django_project/web/templates/alerts.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} Alerts - Save My Crops {% endblock title%}
+
 {% block content %}
 
 <!-- Wrapper div -->
