--- a/django_project/web/templates/confirm_delete_crop_field.html
+++ b/django_project/web/templates/confirm_delete_crop_field.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} Delete Crop Field - Save My Crops {% endblock title%}
+
 {% block content %}
 
 <div class="row">
