--- a/django_project/web/templates/confirm_delete_entry.html
+++ b/django_project/web/templates/confirm_delete_entry.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} Delete pest/disease entry - Save My Crops {% endblock title%}
+
 {% block content %}
 
 <div class="row">
