--- a/django_project/web/templates/crop_field_detail.html
+++ b/django_project/web/templates/crop_field_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} {{cropfield.display_name}} - Save My Crops {% endblock title%}
+
 {% block content %}
 
 <!-- Wrapper div -->
