--- a/django_project/web/templates/crop_field_entries.html
+++ b/django_project/web/templates/crop_field_entries.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} Crop Field Pest and Diseases - Save My Crops {% endblock title%}
+
 {% block content %}
 
 <!-- Wrapper div -->
