--- a/django_project/web/templates/entry_detail.html
+++ b/django_project/web/templates/entry_detail.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} Pest / Disease Detail - Save My Crops {% endblock title%}
+
 {% block content %}
 
 <!-- Wrapper div -->
