--- a/django_project/web/templates/entry_form.html
+++ b/django_project/web/templates/entry_form.html
@@ -1,5 +1,7 @@
 {%  extends 'base.html' %}
 
+{% block title%} Pest / Disease Form - Save My Crops {% endblock title%}
+
 {% block style %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}files_widget/css/widgets.css">
 {% endblock style %}
