--- a/django_project/web/templates/map.html
+++ b/django_project/web/templates/map.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} Map Explorer - Save My Crops {% endblock title%}
+
 {% block content %}
 
 {% if user.is_authenticated %}
