--- a/django_project/web/static/css/main.css
+++ b/django_project/web/static/css/main.css
@@ -1,22 +1,26 @@
+html,
 body {
-    /* Define background color just because of footer. It will look like
-    footer extends to the bottom of the screen no matter what */
-    background-color: #333333;
+    margin:0;
+    padding:0;
+    height:100%;
+}
+#page-wrapper {
+    min-height:100%;
+    position:relative;
+}
+#content {
+    padding-bottom:25px; /* Height of the footer element */
 }
 #footer {
-    position: relative;
-    clear: both;
+    background:#333333;
+    width:100%;
+    height:25px;
+    position:absolute;
+    bottom:0;
+    left:0;
     text-align: center;
     color: #9b8c75;
     font-size: 12px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    /* Set the same background color as body */
-    background-color: #333333;
-}
-#content {
-    min-height: 500px;
-    background-color: white;
 }
 
 .vp-error,
